Добавлен первый заказ

--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -86,7 +86,7 @@
             <ul class="what-we-do-cards">
                 <li class="what-we-do-card-item col-md-4">
                     <i class="fab fa-dev"></i>
-                    <a href="#" class="what-card-link">
+                    <a href="#" class="card-link">
                         App & Software <br>
                         Development
                     </a>
@@ -100,7 +100,7 @@
 
                 <li class="what-we-do-card-item col-md-4">
                     <i class="fab fa-chrome"></i>
-                    <a href="#" class="what-card-link">
+                    <a href="#" class="card-link">
                         Web Design <br>
                         & Hosting
                     </a>
@@ -114,7 +114,7 @@
 
                 <li class="what-we-do-card-item col-md-4">
                     <i class="fas fa-camera"></i>
-                    <a href="#" class="what-card-link">
+                    <a href="#" class="card-link">
                         Web Photos <br>
                         & Videos
                     </a>
@@ -162,7 +162,7 @@
 </section>
 
 <section class="serve">
-    <div class="container">
+    <div class="container p-0">
         <div class="row">
             <div class="col-md-6">
                 <div class="serve-title-block">
@@ -184,149 +184,240 @@
         </div>
 
 
-        <div class="row">
-            <ul class="serve-cards">
-                <li class="what-we-do-card-item col-md-4">
-                    <img src="img/crops_white-min.png" alt="crops_white-min" class="serve-image">
-                    <a href="#" class="what-card-link">
-                        App & Software <br>
-                        Development
+        <div style="margin-top: 110px" class="serv-card-row row d-flex justify-content-between">
+            <div class="col-md-4">
+                <div class="serve-card">
+                    <div class="serve-image">
+                        <i class="fas fa-circle serve-image-bg"></i>
+                        <img src="img/crops_white-min.png" alt="dollars-symbol_white" class="serve-image-front">
+                    </div>
+                    <a href="#" class="card-link">
+                        Agriculture
                     </a>
-                    <p class="what-card-text">
-                        We use the latest technologies to build apps and custom software solutions.
+                    <p class="serve-card-text">
+                        Make sure clients and farmers understand who you are and what you do with an intuitive website that easily connects with your audience.
                     </p>
                     <a href="#" class="what-card-learn-more">
                         Learn More
                     </a>
-                </li>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="serve-card">
+                    <div class="serve-image">
+                        <i class="fas fa-circle serve-image-bg"></i>
+                        <img src="img/dollars-symbol_white-min_4.png" alt="dollars-symbol_white" class="serve-image-front">
+                    </div>
+                    <a href="#" class="card-link">
+                        Banking & Finance
+                    </a>
+                    <p class="serve-card-text">
+                        With decades of experience and a deep understanding of security and compliance, Onsharp has your best interest in mind.
+                    </p>
+                    <a href="#" class="what-card-learn-more">
+                        Learn More
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="serve-card">
+                    <div class="serve-image">
+                        <i class="fas fa-circle serve-image-bg"></i>
+                        <img src="img/traffic-cone_white-min.png" alt="traffic-cone_white" class="serve-image-front">
+                    </div>
 
-                <li class="what-we-do-card-item col-md-4">
-                    <img src="img/dollars-symbol_white-min_4.png" alt="" class="serve-image">
-                    <a href="#" class="what-card-link">
-                        Web Design <br>
-                        & Hosting
+                    <a href="#" class="card-link">
+                        Construction
                     </a>
-                    <p class="what-card-text">
-                        We design, build, and host websites for hundreds of innovative companies.
+                    <p class="serve-card-text">
+                        Creating a website is a lot like construction. Let us help you build an online presence that truly represents the quality of your work.
                     </p>
                     <a href="#" class="what-card-learn-more">
                         Learn More
                     </a>
-                </li>
-
-                <li class="what-we-do-card-item col-md-4">
-                    <img src="img/traffic-cone_white-min.png" alt="" class="serve-image">
-                    <a href="#" class="what-card-link">
-                        Web Photos <br>
-                        & Videos
-                    </a>
-                    <p class="what-card-text">
-                        We capture brilliant photos and videos that boost the visual appearance of your website.
-                    </p>
-                    <a href="#" class="what-card-learn-more">
-                        Learn More
-                    </a>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
 
-        <div class="row">
-            <ul class="serve-cards">
-                <li class="what-we-do-card-item col-md-4">
-                    <img src="img/compass-for-drawing_white-min.png" alt="" class="serve-image">
-                    <a href="#" class="what-card-link">
-                        App & Software <br>
-                        Development
+        <div style="margin-top: 110px" class="serv-card-row row d-flex justify-content-between">
+            <div class="col-md-4">
+                <div class="serve-card">
+                    <div class="serve-image">
+                        <i class="fas fa-circle serve-image-bg"></i>
+                        <img src="img/compass-for-drawing_white-min.png" alt="dollars-symbol_white" class="serve-image-front">
+                    </div>
+                    <a href="#" class="card-link">
+                        Engineering
                     </a>
-                    <p class="what-card-text">
-                        We use the latest technologies to build apps and custom software solutions.
+                    <p class="serve-card-text">
+                        Don't let your website undermine what you do as an engineering firm. Let us help you demonstrate your hard work and dedication to each project.
                     </p>
                     <a href="#" class="what-card-learn-more">
                         Learn More
                     </a>
-                </li>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="serve-card">
+                    <div class="serve-image">
+                        <i class="fas fa-circle serve-image-bg"></i>
+                        <img src="img/Healthcare.png" alt="dollars-symbol_white" class="serve-image-front">
+                    </div>
+                    <a href="#" class="card-link">
+                        Healthcare
+                    </a>
+                    <p class="serve-card-text">
+                        We have more than 19 years of experience building healthcare websites, management systems, and billing integrations.
+                    </p>
+                    <a href="#" class="what-card-learn-more">
+                        Learn More
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="serve-card">
+                    <div class="serve-image">
+                        <i class="fas fa-circle serve-image-bg"></i>
+                        <img src="img/tools-cross-settings-symbol-for-interface_white-min_4.png" alt="traffic-cone_white" class="serve-image-front">
+                    </div>
 
-                <li class="what-we-do-card-item col-md-4">
-                    <img src="img/Healthcare.png" alt="" class="serve-image">
-                    <a href="#" class="what-card-link">
-                        Web Design <br>
-                        & Hosting
+                    <a href="#" class="card-link">
+                        Manufacturing
                     </a>
-                    <p class="what-card-text">
-                        We design, build, and host websites for hundreds of innovative companies.
+                    <p class="serve-card-text">
+                        Display your great work, process, and attention to detail on your website so people can understand what makes you unique.
                     </p>
                     <a href="#" class="what-card-learn-more">
                         Learn More
                     </a>
-                </li>
-
-                <li class="what-we-do-card-item col-md-4">
-                    <img src="img/tools-cross-settings-symbol-for-interface_white-min_4.png" alt="" class="serve-image">
-                    <a href="#" class="what-card-link">
-                        Web Photos <br>
-                        & Videos
-                    </a>
-                    <p class="what-card-text">
-                        We capture brilliant photos and videos that boost the visual appearance of your website.
-                    </p>
-                    <a href="#" class="what-card-learn-more">
-                        Learn More
-                    </a>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
 
-        <div class="row">
-            <ul class="serve-cards">
-                <li class="what-we-do-card-item col-md-4">
-                    <img src="img/RealEstate.png" alt="" class="serve-image">
-                    <a href="#" class="what-card-link">
-                        App & Software <br>
-                        Development
+        <div style="margin-top: 110px" class="serv-card-row row d-flex justify-content-between">
+            <div class="col-md-4">
+                <div class="serve-card">
+                    <div class="serve-image">
+                        <i class="fas fa-circle serve-image-bg"></i>
+                        <img src="img/RealEstate.png" alt="dollars-symbol_white" class="serve-image-front">
+                    </div>
+                    <a href="#" class="card-link">
+                        Real Estate
                     </a>
-                    <p class="what-card-text">
-                        We use the latest technologies to build apps and custom software solutions.
+                    <p class="serve-card-text">
+                        We provide innovate web design and software integration services that help our real estate clients better serve their tenants.
                     </p>
                     <a href="#" class="what-card-learn-more">
                         Learn More
                     </a>
-                </li>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="serve-card">
+                    <div class="serve-image">
+                        <i class="fas fa-circle serve-image-bg"></i>
+                        <img src="img/Transport-Logistics-min.png" alt="dollars-symbol_white" class="serve-image-front">
+                    </div>
+                    <a href="#" class="card-link">
+                        Transportation & Logistics
+                    </a>
+                    <p class="serve-card-text">
+                        We help our clients leverage new and emerging transportation and logistics technologies that drive growth and efficiency.
+                    </p>
+                    <a href="#" class="what-card-learn-more">
+                        Learn More
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="serve-card">
+                    <div class="serve-image">
+                        <i class="fas fa-circle serve-image-bg"></i>
+                        <img src="img/electric-tower_white-min.png" alt="traffic-cone_white" class="serve-image-front">
+                    </div>
 
-                <li class="what-we-do-card-item col-md-4">
-                    <img src="img/Transport-Logistics-min.png" alt="" class="serve-image">
-                    <a href="#" class="what-card-link">
-                        Web Design <br>
-                        & Hosting
+                    <a href="#" class="card-link">
+                        Utilities
                     </a>
-                    <p class="what-card-text">
-                        We design, build, and host websites for hundreds of innovative companies.
+                    <p class="serve-card-text">
+                        Stay connected to your customers with a website that represents who you are and what you do. Let us help you build a solution that works for you.
                     </p>
                     <a href="#" class="what-card-learn-more">
                         Learn More
                     </a>
-                </li>
-
-                <li class="what-we-do-card-item col-md-4">
-                    <img src="img/electric-tower_white-min.png" alt="" class="serve-image">
-                    <a href="#" class="what-card-link">
-                        Web Photos <br>
-                        & Videos
-                    </a>
-                    <p class="what-card-text">
-                        We capture brilliant photos and videos that boost the visual appearance of your website.
-                    </p>
-                    <a href="#" class="what-card-learn-more">
-                        Learn More
-                    </a>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
+    </div>
+</section>
 
+<section class="subscribe">
+    <div class="container">
+        <div class="row">
+            <div class="col d-flex flex-column justify-content-center">
+                <h2 class="subscribe-title">
+                    Valuable Insights
+                </h2>
+                <p class="subscribe-text">
+                    Subscribe to our newsletter for valuable web design and app development tips that will help you run a more successful business.
+                </p>
+            </div>
+        </div>
+        <div class="row" style="margin-top: 40px;">
+            <div class="offset-4 col-md-4">
+                <a href="#" class="subscribe-btn">
+                    Sign Me Up!
+                </a>
+            </div>
+        </div>
     </div>
 </section>
 
 
+<section class="companies">
+    <div class="container p-0">
+        <div class="row">
+            <div class="col pr-0 pl-0">
+                <div class="what-we-do-title">
+                    <h3 class="what-we-do-title__label">
+                        OUR WORK GETS NOTICED
+                    </h3>
+                    <p class="what-we-do-title__text">
+                        We work with innovative companies in agriculture, banking & finance, construction, engineering, manufacturing, and utilities.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-md-1 col-md-2">
+                <a href="#" class="company-card">
+                    <img src="#" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" class="company-card">
+                    <img src="#" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" class="company-card">
+                    <img src="#" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" class="company-card">
+                    <img src="#" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-md-2 mr-auto">
+                <a href="#" class="company-card">
+                    <img src="#" alt="company" class="company-image">
+                </a>
+            </div>
+        </div>
+    </div>
 
+</section>
 
 <script src="js/bootstrap.min.js"></script>
 
